docs: Add documentation for show all tasks
