# handler/showAllTasks.go
@@ -7,6 +7,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/
+
+// @Summary List task
+// @Descripition List all tasks
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Success 200 {object} ShowAllTasksResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /tasks [get]
 func ShowAllTasksHandler(ctx *gin.Context) {
 	tasks := []schemas.Task{}
 	if err := db.Find(&tasks).Error; err != nil {
